implemented the category index and show action/views

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Categories#show</h1>
-<p>Find me in app/views/categories/show.html.erb</p>
+<%# <h1>Categories#show</h1>
+<p>Find me in app/views/categories/show.html.erb</p> %>
+<h2><%= @category.name %></h2>
+<p>There are <%= @category.products.count %> different <%= @category.name %> that we sell in our store.</p>
+
+<p><%= @category.name %> menu items.</p>
+<% if @category.products.empty? %>
+  <p>Sorry we are out of stock of any of our <%= @category.name %> products.</p>
+<% else %>
+ <ul>
+  <% @category.products.each do  |product| %>
+    <li><%= product.name %></li>
+  <% end %>
+ </ul>
+<% end %>
