--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<%# <h1>Categories#index</h1>
+<p>Find me in app/views/categories/index.html.erb</p> %>
+<% if @categories.empty? %>
+  <p>There are no Categories available.</p>
+<% else %>
+  <% @categories.each do |category| %>
+    <h2><%= category.name %></h2>
+    <p><%= category.description %></p>
+    <p>There are <%= category.products.count %> different <%= category.name %> that we sell in our store.</p>
+    <p>To see all of our <%= category.name %> products. <%= link_to 'Click Here', category %></p>
+  <% end %>
+<% end %>
