implemented the products index action and view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,5 +15,6 @@
     <p><%= link_to 'Home', root_path %></p>
   </header>
     <%= yield %>
+    <footer>Copyright Francis Cruz for Frank's Cafe 2020</footer>
   </body>
 </html>
