--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<%# <h1>Products#index</h1>
+<p>Find me in app/views/products/index.html.erb</p> %>
+<h2>All Products</h2>
+<% if @products.empty? %>
+  <p>We currently have no products in stocks</p>
+<% else %>
+  <ul>
+    <% @products.each do |product| %>
+      <li><%= product.name %></li>
+    <% end %>
+  </ul>
+<% end %>
