products index and show plus seed script
completed the index and show action/view of the products and updated the seed script to include 1 more product.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
   <body>
   <header>
     <h1>Frank's Cafe</h1>
-    <p><%= link_to 'Home', root_path %></p>
+    <p>
+      <%= link_to 'Home', root_path %> |
+      <%= link_to 'Products', products_path %>
+    </p>
+
   </header>
     <%= yield %>
     <footer>Copyright Francis Cruz for Frank's Cafe 2020</footer>
