--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -9,7 +9,7 @@
 <% else %>
  <ul>
   <% @category.products.each do  |product| %>
-    <li><%= product.name %></li>
+    <li><%= link_to product.name, product_path(product) %></li>
   <% end %>
  </ul>
 <% end %>
