--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Products#show</h1>
-<p>Find me in app/views/products/show.html.erb</p>
+<%# <h1>Products#show</h1>
+<p>Find me in app/views/products/show.html.erb</p> %>
+<h2><%= @product.name %></h2>
+<p>Category: <%= @product.category.name %></p>
