--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <section class="section">
     <div class="container">
       <header>
-        <h1>Frank's Cafe</h1>
+        <h1 class="title is-1">Frank's Cafe</h1>
         <p>
           <%= link_to 'Home', root_path %> |
           <%= link_to 'Products', products_path %>
