--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <%# <h1>Products#index</h1>
 <p>Find me in app/views/products/index.html.erb</p> %>
-<h2>All Products</h2>
+<h2 class="title is-3" style="margin-top: 20px">All Products</h2>
 <% if @products.empty? %>
   <p>We currently have no products in stocks</p>
 <% else %>
