--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,8 +3,9 @@
 <% if @categories.empty? %>
   <p>There are no Categories available.</p>
 <% else %>
+  <h1 class='title is-3' style='margin-top: 20px'>All Categories</h1>
   <% @categories.each do |category| %>
-    <h2><%= category.name %></h2>
+    <h2 class='subtitle is-3' style='margin-top: 20px'><%= category.name %></h2>
     <p><%= category.description %></p>
     <p>There are <%= category.products.count %> different <%= category.name %> that we sell in our store.</p>
     <p>To see all of our <%= category.name %> products. <%= link_to 'Click Here', category %></p>
