--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <div class="container">
       <header>
         <h1 class="title is-1">Frank's Cafe</h1>
+        <h2 class='subtitle is-4'>Enjoy some of the foods downtown Toronto has to offer!!</h2>
         <p>
           <%= link_to 'Home', root_path %> |
           <%= link_to 'Products', products_path %>
@@ -23,7 +24,7 @@
 
       </header>
       <%= yield %>
-      <footer>Copyright Francis Cruz for Frank's Cafe 2020</footer>
+      <footer style='margin-top: 5%'>Copyright Francis Cruz for Frank's Cafe 2020</footer>
     </div>
   </section>
 
