--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,7 +14,9 @@
       < end >
     </ul> %>
 <div class='columns is-multiline'>
-  <%= render @category.products %>
+  <%= render partial: 'products/product',
+             collection: @category.products,
+             locals: { show_link: true } %>
 </div>
 <% end %>
 
