--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,13 @@
 <div class='column'>
   <div class="card">
-    <div class="card-content" style='height: 280px'>
-      <p class='title'><%= link_to product.name, product %></p>
+    <div class="card-content">
+      <p class='title'>
+        <% if show_link %>
+          <%= link_to product.name, product %>
+        <% else %>
+          <%= product.name %>
+        <% end %>
+      </p>
       <p>Description: <%= product.description %></p>
     </div>
     <footer class="card-footer">
