--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,4 +5,6 @@
 <%# <h2 class="title is-3" style="margin-top: 20px"><= @product.name ></h2>
 <p>Category: <= link_to @product.category.name, @product.category ></p> %>
 
-<%= render @product %>
+<%= render partial: 'product',
+           object: @product,
+           locals: { show_link: false } %>
