--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
         <h2 class='subtitle is-4'>Enjoy some of the foods downtown Toronto has to offer!!</h2>
         <p>
           <%= link_to 'Home', root_path %> |
-          <%= link_to 'Products', products_path %>
+          <%= link_to 'Products', products_path %> |
+          <%= link_to 'About', page_path('about') %> |
+          <%= link_to 'Contact', page_path('contact') %>
         </p>
 
       </header>
