added to show product image on card if there is an associated image with that product

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container">
       <header>
         <h1 class="title is-1">Frank's Cafe</h1>
-        <h2 class='subtitle is-4'>Enjoy some of the foods downtown Toronto has to offer!!</h2>
+        <h2 class='subtitle is-4'>Enjoy some of the great foods downtown Toronto has to offer!!</h2>
         <p>
           <%= link_to 'Home', root_path %> |
           <%= link_to 'Products', products_path %> |
