--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,7 @@
 <%# <h1>Categories#show</h1>
 <p>Find me in app/views/categories/show.html.erb</p> %>
 <h2 class="title is-3" style='margin-top: 20px'><%= @category.name %></h2>
-<h4 class="subtitle is-5">We sell <%= @category.products.count %> different <%= @category.name %> cafe.</h4>
+<h4 class="subtitle is-5">We sell <%= @category.products.count %> different <%= @category.name %> items.</h4>
 
 <h5 class="subtitle is-4" style='margin-top: 20px'><%= @category.name %> menu items.</h5>
 <% if @category.products.empty? %>
