--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,15 @@
 <%# <h1>Products#index</h1>
 <p>Find me in app/views/products/index.html.erb</p> %>
 <h2 class="title is-3" style="margin-top: 20px">All Products</h2>
+
+
+
 <% if @products.empty? %>
   <p>We currently have no products in stocks</p>
 <% else %>
-  <ul>
-    <% @products.each do |product| %>
-      <li>
-        <%= link_to product.name, product_path(product) %>
-        <p>Category: <%= link_to product.category.name, category_path(product.category) %></p>
-      </li>
-    <% end %>
-  </ul>
+  <div class='columns is-multiline'>
+    <%= render partial: 'products/product',
+              collection: @products,
+              locals: { show_link: true } %>
+  </div>
 <% end %>
